MOF-152 - fixed buttons on iOS

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,5 +1,4 @@
 .button {
-  margin: 0;
   padding: 0;
   border: 0;
   border-radius: 2px;
