--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -30,6 +30,7 @@ textarea {
 }
 
 .button {
+  margin: 0;
   padding: 0;
   border: 0;
   border-radius: 2px;
